internal/toml-test/tests/invalid/string/string.multi
bad-hex-esc-01 = "\x0g"
bad-hex-esc-02 = "\xG0"
bad-hex-esc-03 = "\x"
bad-hex-esc-04 = "\x 50"

bad-uni-esc-01 = "val\ue"
bad-uni-esc-02 = "val\Ux"
bad-uni-esc-03 = "val\U0000000"
bad-uni-esc-04 = "val\U0000"
bad-uni-esc-05 = "val\Ugggggggg"
bad-uni-esc-06 = "This string contains a non scalar unicode codepoint \uD801"
bad-uni-esc-07 = "\uabag"

bad-uni-esc-ml-01 = """val\ue"""
bad-uni-esc-ml-02 = """val\Ux"""
bad-uni-esc-ml-03 = """val\U0000000"""
bad-uni-esc-ml-04 = """val\U0000"""
bad-uni-esc-ml-05 = """val\Ugggggggg"""
bad-uni-esc-ml-06 = """This string contains a non scalar unicode codepoint \uD801"""
bad-uni-esc-ml-07 = """\uabag"""
